tree_sitter_v/grammar.js
		source_file: ($) =>
			seq(
				optional($.shebang),
				optional($.module_clause),
				optional($.import_list),
				repeat(
					choice(
						seq($._top_level_declaration, optional(terminator)),
						seq($._statement, optional(terminator)),
					),
				),
			),

		import_list: ($) => repeat1($.import_declaration),

		import_declaration: ($) => seq('import', $.import_spec, semi),

		import_spec: ($) =>
			seq($.import_path, optional($.import_alias), optional($.selective_import_list)),

		// foo.bar.baz
		import_path: ($) => seq($.import_name, repeat(seq('.', $.import_name))),

		// foo
		import_name: ($) => $.identifier,

		// foo as bar
		//     ^^^^^^
		_top_level_declaration: ($) =>
			choice(
				$.const_declaration,
				$.global_var_declaration,
				$.type_declaration,
				$.function_declaration,
				$.static_method_declaration,
				$.struct_declaration,
				$.enum_declaration,
				$.interface_declaration,
			),

		function_declaration: ($) =>
			prec.right(
				PREC.resolve,
				seq(
					optional(field('attributes', $.attributes)),
					optional($.visibility_modifiers),
					'fn',
					optional(field('receiver', $.receiver)),
					field('name', $._function_name),
					optional(field('generic_parameters', $.generic_parameters)),
					field('signature', $.signature),
					optional(field('body', $.block)),
				),
			),

		_function_name: ($) => choice($.identifier, $.overridable_operator),

		signature: ($) =>
			prec.right(
				seq(
					field('parameters', choice($.parameter_list, $.type_parameter_list)),
					optional(field('result', $.plain_type)),
				),
			),

		parameter_list: ($) => prec(PREC.resolve, seq('(', comma_sep($.parameter_declaration), ')')),

		parameter_declaration: ($) =>
			seq(
				optional(field('mutability', $.mutability_modifiers)),
				field('name', $.identifier),
				optional(field('variadic', '...')),
				field('type', $.plain_type),
			),

		type_parameter_list: ($) => seq('(', comma_sep($.type_parameter_declaration), ')'),

		type_parameter_declaration: ($) =>
			prec(
				PREC.primary,
				seq(
					optional($.mutability_modifiers),
					optional(field('variadic', '...')),
					field('type', $.plain_type),
				),
			),

		// fn foo[T, T2]() {}
		//       ^^^^^^^
		struct_declaration: ($) =>
			seq(
				optional(field('attributes', $.attributes)),
				optional($.visibility_modifiers),
				choice('struct', 'union'),
				field('name', $.identifier),
				optional(field('generic_parameters', $.generic_parameters)),
				$._struct_body,
			),

		_struct_body: ($) =>
			seq(
				'{',
				repeat(
					choice(
						seq($.struct_field_scope, optional(terminator)),
						seq($.struct_field_declaration, optional(terminator)),
					),
				),
				'}',
			),

		// pub:
		// mut:
		// pub mut:
		// __global:
		struct_field_declaration: ($) => choice($._struct_field_definition, $.embedded_definition),

		_struct_field_definition: ($) =>
			prec.right(
				PREC.type_initializer,
				seq(
					field('name', $.identifier),
					field('type', $.plain_type),
					optional(seq('=', field('default_value', $._expression))),
					optional(field('attributes', $.attribute)),
				),
			),

		_expression: ($) => choice($._expression_without_blocks, $._expression_with_blocks),

		_expression_without_blocks: ($) =>
			choice(
				$.parenthesized_expression,
				$.go_expression,
				$.spawn_expression,
				$.call_expression,
				$.function_literal,
				$.reference_expression,
				$._max_group,
				$.array_creation,
				$.fixed_array_creation,
				$.unary_expression,
				$.receive_expression,
				$.binary_expression,
				$.is_expression,
				$.in_expression,
				$.index_expression,
				$.slice_expression,
				$.as_type_cast_expression,
				$.selector_expression,
				$.enum_fetch,
				$.inc_expression,
				$.dec_expression,
				$.or_block_expression,
				$.option_propagation_expression,
				$.result_propagation_expression,
			),

		option_propagation_expression: ($) => prec(PREC.match_arm_type, seq($._expression, '?')),

		go_expression: ($) => prec.left(PREC.composite_literal, seq('go', $._expression)),

		parenthesized_expression: ($) => seq('(', field('expression', $._expression), ')'),

		call_expression: ($) =>
			prec.right(
				PREC.primary,
				choice(
					seq(field('function', token('json.decode')), field('arguments', $.special_argument_list)),
					seq(
						field('name', $._expression),
						optional(field('type_parameters', $.type_parameters)),
						field('arguments', $.argument_list),
					),
				),
			),

		argument_list: ($) =>
			seq('(', choice(repeat(seq($.argument, optional(list_separator))), $.short_lambda), ')'),

		argument: ($) =>
			choice($._expression, $.mutable_expression, $.keyed_element, $.spread_expression),

		type_initializer: ($) =>
			prec(
				PREC.type_initializer,
				seq(field('type', $.plain_type), field('body', $.type_initializer_body)),
			),

		type_initializer_body: ($) =>
			seq(
				'{',
				optional(
					choice(
						field('element_list', $.element_list),
						// For short struct init syntax
						field('short_element_list', $.short_element_list),
					),
				),
				'}',
			),

		element_list: ($) =>
			repeat1(
				seq(
					choice($.spread_expression, $.keyed_element, $.reference_expression),
					optional(list_separator),
				),
			),

		keyed_element: ($) =>
			seq(
				field('key', alias($.reference_expression, $.field_name)),
				':',
				field('value', $._expression),
			),

		function_literal: ($) =>
			prec.right(
				seq(
					'fn',
					optional(field('capture_list', $.capture_list)),
					optional(field('generic_parameters', $.generic_parameters)),
					field('signature', $.signature),
					field('body', $.block),
				),
			),

		capture_list: ($) => seq('[', comma_sep($.capture), optional(','), ']'),

		capture: ($) => seq(optional($.mutability_modifiers), $.reference_expression),

		reference_expression: ($) => prec.left($.identifier),
		type_reference_expression: ($) => prec.left($.identifier),

		binary_expression: ($) => {
			const table = [
				[PREC.multiplicative, choice(...multiplicative_operators)],
				[PREC.additive, choice(...additive_operators)],
				[PREC.comparative, choice(...comparative_operators)],
				[PREC.and, '&&'],
				[PREC.or, '||'],
			];

			return choice(
				...table.map(([precedence, operator]) =>
					prec.left(
						Number(precedence),
						seq(
							field('left', $._expression),
							// @ts-ignore
							field('operator', operator),
							field('right', $._expression),
						),
					),
				),
			);
		},

		literal: ($) =>
			choice(
				$.int_literal,
				$.float_literal,
				$._string_literal,
				$.rune_literal,
				$.none,
				$.true,
				$.false,
				$.nil,
			),

		true: () => 'true',
		false: () => 'false',
		nil: () => 'nil',

		array_creation: ($) => prec.right(PREC.multiplicative, $._array),

		_array: ($) => seq('[', repeat(seq($._expression, optional(','))), ']'),

		selector_expression: ($) =>
			prec.dynamic(
				-1,
				prec(
					PREC.primary,
					seq(
						field('operand', $._expression),
						choice('.', '?.'),
						field('field', choice($.reference_expression, $.compile_time_selector_expression)),
					),
				),
			),

		if_expression: ($) =>
			seq(
				'if',
				choice(field('condition', $._expression), field('guard', $.var_declaration)),
				field('block', $.block),
				optional($.else_branch),
			),

		else_branch: ($) =>
			seq('else', field('else_branch', choice(field('block', $.block), $.if_expression))),

		compile_time_if_expression: ($) =>
			seq(
				'$if',
				field('condition', seq($._expression, optional('?'))),
				field('block', $.block),
				optional(seq('$else', field('else_branch', choice($.block, $.compile_time_if_expression)))),
			),

		is_expression: ($) =>
			prec.dynamic(
				2,
				seq(
					field('left', seq(optional($.mutability_modifiers), $._expression)),
					choice('is', '!is'),
					field('right', $.plain_type),
				),
			),

		in_expression: ($) =>
			prec.left(
				PREC.comparative,
				seq(field('left', $._expression), choice('in', '!in'), field('right', $._expression)),
			),

		match_expression: ($) =>
			seq(
				'match',
				field('condition', choice($._expression, $.mutable_expression)),
				'{',
				optional($.match_arms),
				'}',
			),

		match_arms: ($) => repeat1(choice($.match_arm, $.match_else_arm_clause)),

		match_arm: ($) => seq(field('value', $.match_expression_list), field('block', $.block)),

		match_expression_list: ($) =>
			comma_sep1(
				choice($._expression_without_blocks, $.match_arm_type, alias($._definite_range, $.range)),
			),

		match_arm_type: ($) => prec(PREC.match_arm_type, $.plain_type),

		match_else_arm_clause: ($) => seq('else', field('block', $.block)),

		unsafe_expression: ($) => seq('unsafe', $.block),

		// TODO: this should be put into a separate grammar to avoid any "noise"
		int_literal: () => token(int_literal),

		_string_literal: ($) =>
			choice($.interpreted_string_literal, $.c_string_literal, $.raw_string_literal),

		interpreted_string_literal: ($) =>
			prec(
				1,
				choice(
					seq(
						"'",
						repeat(
							choice(
								token.immediate(prec.right(1, /[^'\\$]+/)),
								$.escape_sequence,
								$.string_interpolation,
							),
						),
						"'",
					),
					seq(
						'"',
						repeat(
							choice(
								token.immediate(prec.right(1, /[^"\\$]+/)),
								$.escape_sequence,
								$.string_interpolation,
							),
						),
						'"',
					),
				),
			),

		identifier: () =>
			token(
				seq(
					optional('@'),
					optional('$'),
					optional('C.'),
					optional('JS.'),
					choice(unicode_letter, '_'),
					repeat(choice(letter, unicode_digit)),
				),
			),

		visibility_modifiers: () => prec.left(choice('pub', '__global')),

		mutability_modifiers: () =>
			prec.left(
				PREC.resolve,
				choice(seq('mut', optional('static'), optional('volatile')), 'shared'),
			),

		mutable_expression: ($) => prec(PREC.resolve, seq($.mutability_modifiers, $._expression)),

		expression_list: ($) =>
			prec(PREC.resolve, comma_sep1(choice($._expression, $.mutable_expression))),

		plain_type: ($) =>
			prec.right(
				PREC.primary,
				choice($._plain_type_without_special, $.option_type, $.result_type, $.multi_return_type),
			),

		_plain_type_without_special: ($) =>
			prec.right(
				PREC.primary,
				choice(
					$.type_reference_expression,
					$.qualified_type,
					$.pointer_type,
					$.wrong_pointer_type,
					$.array_type,
					$.fixed_array_type,
					$.function_type,
					$.generic_type,
					$.map_type,
					$.channel_type,
					$.shared_type,
					$.thread_type,
					$.atomic_type,
					$.anon_struct_type,
				),
			),

		option_type: ($) => prec.right(seq('?', optional($.plain_type))),

		qualified_type: ($) =>
			seq(field('module', $.reference_expression), '.', field('name', $.type_reference_expression)),

		pointer_type: ($) => prec(PREC.match_arm_type, seq('&', $.plain_type)),

		// In languages like Go, pointers use an asterisk, not an ampersand,
		// so this rule is needed to properly parse and then give an error to the user.
		function_type: ($) => prec.right(seq('fn', field('signature', $.signature))),

		// ==================== TYPES END ====================

		// ==================== STATEMENTS ====================

		_statement_list: ($) =>
			choice(
				seq(
					$._statement,
					repeat(seq(terminator, $._statement)),
					optional(
						seq(terminator, optional(alias($.empty_labeled_statement, $.labeled_statement))),
					),
				),
				alias($.empty_labeled_statement, $.labeled_statement),
			),

		_statement: ($) =>
			choice(
				$.simple_statement,
				$.assert_statement,
				$.continue_statement,
				$.break_statement,
				$.return_statement,
				$.asm_statement,
				$.goto_statement,
				$.labeled_statement,
				$.defer_statement,
				$.for_statement,
				$.compile_time_for_statement,
				$.send_statement,
				$.block,
				$.hash_statement,
				$.append_statement,
			),

		simple_statement: ($) =>
			choice(
				$.var_declaration,
				$._expression,
				$.assignment_statement,
				alias($.strictly_expression_list, $.expression_list),
			),

		assert_statement: ($) =>
			prec.left(seq('assert', $._expression, optional(seq(',', $._expression)))),

		var_declaration: ($) =>
			prec.right(
				seq(
					field('var_list', $.expression_list),
					':=',
					field('expression_list', $.expression_list),
				),
			),

		block: ($) => seq('{', optional($._statement_list), '}'),

		return_statement: ($) =>
			prec.right(seq('return', optional(field('expression_list', $.expression_list)))),

		_definite_range: ($) =>
			prec(
				PREC.multiplicative,
				seq(
					field('start', $._expression),
					field('operator', choice('..', '...')),
					field('end', $._expression),
				),
			),
