tree_sitter_v/test/corpus/in_expression.txt
================================================================================
Simple in expression
================================================================================
10 in [1, 2, 3]
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (in_expression
      (literal
        (int_literal))
      (array_creation
        (literal
          (int_literal))
        (literal
          (int_literal))
        (literal
          (int_literal))))))

================================================================================
Simple not in expression
================================================================================
10 !in [1, 2, 3]
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (in_expression
      (literal
        (int_literal))
      (array_creation
        (literal
          (int_literal))
        (literal
          (int_literal))
        (literal
          (int_literal))))))
